made header,main,services, portfolio sections

--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,178 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Agency</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="content">
+            <header class="header">
+                <div class="container">
+                    <div class="header__inner">
+                        <a href="#" class="header__inner-logo"><img src="images/header/header_logo.png" alt="logo"></a>
+                        <a href="#" class="header__inner-nav"><img src="images/header/header_nav.png" alt="menu"></a>
+                    </div>
+                </div>
+            </header>
+            <section class="main" style="background-image: url(images/header/header_bg.jpg);">
+                <div class="container__fluid">
+                    <div class="main__box">
+                        <div class="main__box-images"><img src="images/content/artica.png" alt="image"></div>
+                        <div class="line"></div>
+                        <div class="main__box-text">
+                            Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan 
+                            tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttlit nisi, pretium ut
+                            lacinia in elementumestibulum ac diam sit anet.
+                        </div>
+                        <div class="main__box-btn">
+                            <a href="#">Purshase Theme</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-hello
+            <section class="services">
+                <div class="container">
+                    <div class="services__title title">FULLY LAYERED AND CUSTOMIZABLE TEMPLATE</div>
+                    <div class="services__subtitle subtitle">OUR SERVICES</div>
+                    <div class="line grey"></div>
+                    <div class="services__text">
+                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tinci
+                        dunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lac
+                        inia in, elementum id enim. Vestibulum ac diam sit anet.
+                    </div>
+                    <div class="services__items">
+                        <div class="services__items-item">
+                            <a href="#" class="services__items-images" ><img src="images/icons/icon_1.png" alt="icon"></a>
+                            <a href="#" class="services__items-title">HTML&CSS</a>
+                            <a href="#"class="services__items-text">
+                                Donec sollicitudin molestie malesuada. 
+                                Curabitur aliquet quam id dui posuere 
+                                blandit. Nulla porttitor.
+                            </a>
+                        </div>
+                        <div class="services__items-item">
+                            <a href="#" class="services__items-images"><img src="images/icons/icon_2.png" alt="icon"></a>
+                            <a href="#" class="services__items-title">GRAPHIC DESIGN</a>
+                            <a href="#" class="services__items-text">
+                                Donec sollicitudin molestie malesuada. 
+                                Curabitur aliquet quam id dui posuere 
+                                blandit. Nulla porttitor.
+                            </a>
+                        </div>
+                        <div class="services__items-item">
+                            <a href="#" class="services__items-images"><img src="images/icons/icon_3.png" alt="icon"></a>
+                            <a href="#" class="services__items-title">ON TIME PROJECTS</a>
+                            <a href="#" class="services__items-text">
+                                Donec sollicitudin molestie malesuada. 
+                                Curabitur aliquet quam id dui posuere 
+                                blandit. Nulla porttitor.
+                            </a>
+                        </div>
+                        <div class="services__items-item">
+                            <a href="#" class="services__items-images"><img src="images/icons/icon_4.png" alt="icon"></a>
+                            <a href="#" class="services__items-title">FULLY SUPPORT</a>
+                            <a href="#" class="services__items-text">
+                                Donec sollicitudin molestie malesuada. 
+                                Curabitur aliquet quam id dui posuere 
+                                blandit. Nulla porttitor.
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
+            <section class="quotation">
+                <div class="container">
+                    <div class="quotation__box">
+                        <p class="quotation__box-text">
+                            Design must reflect the practical and aesthetic in business but above all... 
+                            good design must primarily serve people.
+                        </p>
+                        <p class="quotation__box-author">Thomas J. Watson </p>
+                    </div>
+                </div>
+            </section>
+            
+            <section class="portfolio">
+                <div class="container">
+                    <div class="title">MODERN AND CLEAN DESIGN</div>
+                    <div class="subtitle">OUR PORTFOLIO</div>
+                    <div class="line grey"></div>
+                    <div class="portfolio__text">
+                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tinci
+                        dunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lac
+                        inia in, elementum id enim. Vestibulum ac diam sit anet.
+                    </div>
+                    <div class="portfolio__gallery">
+                        <div class="portfolio__gallery-btn">
+                            <button type="button" data-filter="all">All</button>
+                            <button type="button" data-filter=".category-graphic">graphic</button>
+                            <button type="button" data-filter=".category-web">web</button>
+                            <button type="button" data-filter=".category-photography">photography</button>
+                        </div>
+                        <div class="portfolio__gallery-wrapper">
+                            <div class="portfolio__gallery-item mix category-graphic" data-order="1">
+                                <a href="#" class="portfolio__gallery-img" style="background-image :url(images/content/gallery_image_1.jpg);"></a>  
+                            </div>   
+                            <div class="portfolio__gallery-item mix category-web" data-order="2">            
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_2.jpg);"></a>
+                            </div> 
+                            <div  class="portfolio__gallery-item mix category-photography" data-order="3">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_3.jpg);"></a>    
+                            </div>       
+                            <div class="portfolio__gallery-item mix category-graphic" data-order="4">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_4.jpg);"></a>
+                            </div>
+                            <div class="portfolio__gallery-item mix category-web" data-order="5">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_5.jpg);"></a>   
+                            </div>                 
+                            <div  class="portfolio__gallery-item mix category-photography" data-order="6">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_6.jpg);"></a>
+                            </div>      
+                            <div class="portfolio__gallery-item mix category-graphic" data-order="7">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_7.jpg);"></a>    
+                            </div> 
+                            <div  class="portfolio__gallery-item mix category-web" data-order="8">               
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_8.jpg);"></a>
+                            </div>     
+                            <div class="portfolio__gallery-item mix category-photography" data-order="9">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_9.jpg);"></a>    
+                            </div>             
+                            <div  class="portfolio__gallery-item mix category-graphic" data-order="10">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_10.jpg);"></a>
+                            </div>     
+                            <div class="portfolio__gallery-item mix category-graphic" data-order="11">
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_11.jpg);"></a>
+                            </div>  
+                            <div class="portfolio__gallery-item mix category-photography" data-order="12">                   
+                                <a href="#" class="portfolio__gallery-img" style="background-image: url(images/content/gallery_image_12.jpg);"></a>
+                            </div>   
+                        </div>
+                    </div>
+                    <a href="#" class="portfolio__btn-arrow"><img src="images/icons/arrow.png" alt="icon"></a>
+                    <div class="title">WE LOVE OUR WORK</div>
+                    <div class="portfolio__text">
+                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tinci
+                        dunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidunt. 
+                    </div>
+                    <a href="#" class="portfolio__btn">Purshase Theme</a>
+                </div>
+            </section>
 
+
+
+        </div>
+        <footer class="footer">
+
+        </footer>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script>src="js/libs.min.js"</script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
