made about section

--- a/app/index.html
+++ b/app/index.html
@@ -88,14 +88,16 @@
                 </div>
             </section>
             
-            <section class="quotation">
-                <div class="container">
-                    <div class="quotation__box">
-                        <p class="quotation__box-text">
-                            Design must reflect the practical and aesthetic in business but above all... 
-                            good design must primarily serve people.
-                        </p>
-                        <p class="quotation__box-author">Thomas J. Watson </p>
+            <section class="quotation" style="background-image: url(images/content/narrow_bg.jpg);">
+                <div class="quotation__wrapper">
+                    <div class="container">
+                        <div class="quotation__box">
+                            <p class="quotation__box-text">
+                                Design must reflect the practical and aesthetic in business but above all... 
+                                good design must primarily serve people.
+                            </p>
+                            <p class="quotation__box-author">Thomas J. Watson </p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -166,7 +168,115 @@
                 </div>
             </section>
 
+            <section class="about" style="background-image: url(images/content/about_bg.jpg);">
+                <div class="about__wrapper">
+                    <div class="container">
+                        <div class="about__title title">FULLY RESPONSIVE DESIGN</div>
+                        <div class="about__subtitle subtitle">About us</div>
+                        <div class="line"></div>
+                        <div class="about__text">
+                            Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tinci
+                            dunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lac
+                            inia in, elementum id enim. Vestibulum ac diam sit anet.
+                        </div>
+                        <div class="about__items_content">
+                            <div class="about__items tabs">
+                                <div class="about__items-item tab active" data-id="1">
+                                    <div class="about__items-images">
+                                        <a href="#"><img src="images/content/about_image_1.png" alt="photo"></a>
+                                        <div class="about__items-img">
+                                            <a href="#"><img src="images/icons/arrow_blue.png" alt="icon"></a>
+                                        </div>
+                                    </div>
+                                    <div class="about__items-name">Iren Evans</div>
+                                    <div class="about__items-position">Creative Director</div>
+                                </div>
+                                <div class="about__items-item tab" data-id="2">
+                                    <div class="about__items-images">
+                                        <a href="#"><img src="images/content/about_image_4.jpg" alt="photo"></a>
+                                        <div class="about__items-img">
+                                            <a href="#"><img src="images/icons/arrow_blue.png" alt="icon"></a>
+                                        </div>
+                                    </div>
+                                    <div class="about__items-name">John Richards</div>
+                                    <div class="about__items-position">Graphic Designer</div>
+                                </div>
+                                <div class="about__items-item tab" data-id="3">
+                                    <div class="about__items-images">
+                                        <a href="#"><img src="images/content/about_image_3.jpg" alt="photo"></a>
+                                        <div class="about__items-img">
+                                            <a href="#"><img src="images/icons/arrow_blue.png" alt="icon"></a>
+                                        </div>
+                                    </div>
+                                    <div class="about__items-name">Julie Pats</div>
+                                    <div class="about__items-position">Web Developer</div>
+                                </div>
+                                <div class="about__items-item tab" data-id="4">
+                                    <div class="about__items-images">
+                                        <a href="#"><img src="images/content/about_image_5.jpg" alt="photo"></a>
+                                        <div class="about__items-img">
+                                            <a href="#"><img src="images/icons/arrow_blue.png" alt="icon"></a>
+                                        </div>
+                                    </div>
+                                    <div class="about__items-name">Matt Davidson</div>
+                                    <div class="about__items-position">Photographer</div>
+                                </div>
+                            </div>
 
+                            <div class="tab_content">
+                               <div class="about__items-info tab-item active-tab" id="1">
+                                <div class="tab_content-triangle"></div>
+                                    <p class="about__items-info--title">My story</p>
+                                    <p class="about__items-info--text">
+                                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor 
+                                        accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                        Oitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tinci
+                                        dunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                    </p>
+                                    <p class="about__items-info--experience">6 years in Artica</p>
+                                    <p class="about__items-info--place">from NY</p>
+                                </div>
+                                <div class="about__items-info tab-item" id="2">
+                                    <div class="tab_content-triangle john"></div>
+                                    <p class="about__items-info--title">My story</p>
+                                    <p class="about__items-info--text">
+                                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor 
+                                        accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                        Oitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tinci
+                                        dunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                    </p>
+                                    <p class="about__items-info--experience">3 years in Artica</p>
+                                    <p class="about__items-info--place">from LA</p>
+                                </div>
+                                <div class="about__items-info tab-item" id="3">
+                                    <div class="tab_content-triangle julie"></div>
+                                    <p class="about__items-info--title">My story</p>
+                                    <p class="about__items-info--text">
+                                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor 
+                                        accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                        Oitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tinci
+                                        dunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                    </p>
+                                    <p class="about__items-info--experience">2 years in Artica</p>
+                                    <p class="about__items-info--place">from Denver</p>
+                                </div>
+                                <div class="about__items-info tab-item" id="4">
+                                    <div class="tab_content-triangle matt"></div>
+                                    <p class="about__items-info--title">My story</p>
+                                    <p class="about__items-info--text">
+                                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor 
+                                        accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                        Oitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tinci
+                                        dunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit anet.
+                                    </p>
+                                    <p class="about__items-info--experience">1 years in Artica</p>
+                                    <p class="about__items-info--place">from Chicago</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
         <footer class="footer">
@@ -175,7 +285,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-    <script>src="js/libs.min.js"</script>
+    <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
