made skills and achievements sections

--- a/app/index.html
+++ b/app/index.html
@@ -235,6 +235,7 @@
                                     </p>
                                     <p class="about__items-info--experience">6 years in Artica</p>
                                     <p class="about__items-info--place">from NY</p>
+                                    <div class="close_btn"></div>
                                 </div>
                                 <div class="about__items-info tab-item" id="2">
                                     <div class="tab_content-triangle john"></div>
@@ -247,6 +248,7 @@
                                     </p>
                                     <p class="about__items-info--experience">3 years in Artica</p>
                                     <p class="about__items-info--place">from LA</p>
+                                    <div class="close_btn"></div>
                                 </div>
                                 <div class="about__items-info tab-item" id="3">
                                     <div class="tab_content-triangle julie"></div>
@@ -259,6 +261,7 @@
                                     </p>
                                     <p class="about__items-info--experience">2 years in Artica</p>
                                     <p class="about__items-info--place">from Denver</p>
+                                    <div class="close_btn"></div>
                                 </div>
                                 <div class="about__items-info tab-item" id="4">
                                     <div class="tab_content-triangle matt"></div>
@@ -271,9 +274,67 @@
                                     </p>
                                     <p class="about__items-info--experience">1 years in Artica</p>
                                     <p class="about__items-info--place">from Chicago</p>
+                                    <div class="close_btn"></div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="skills">
+                <div class="container">
+                    <div class="title">WE HAVE SKILLS</div>
+                    <div class="skills__text">
+                        Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tinci
+                        dunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidun.
+                    </div>
+                    <div class="skills__inner">
+                        <div class="skills__inner-company">
+                            <div class="skills__inner-title">Our Company</div>
+                            <div class="skills__inner-text">
+                                Cras ultricies ligula sed magna dictum porta. Curabitur arcu erat, accumsan id imperdiet 
+                                et, porttitor at sem. Nulla quis lorem ut libero malesuada feugiat. Nulla porttitor accum
+                                san tincidunt. Vivamus suscipit tortor eget felis porttitor volutpat. Quisque velit nisi, 
+                                pretium ut lacinia in, elementum id enim. Quisque velit nisi, pretium ut lacinia in, 
+                                elementum id enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices 
+                                posuere cubilia Curae; Donec velit neque, auctor situr arcu erat, accumsan id imperdiet 
+                                et, porttitor at sem.
+                            </div>
+                            <a href="#" class="skills__inner-btn">Read More</a>
+                        </div>
+                        <div class="skills__inner-level">
+                            <div class="skills__inner-title">Our skills</div>
+                            <div class="skills__inner-html" style="max-width: 96%;">Html&Css</div>
+                            <div class="skills__inner-js" style="max-width: 89%;">Javascript</div>
+                            <div class="skills__inner-design" style="max-width: 100%;">Graphic Design</div>
+                            <div class="skills__inner-photo" style="max-width: 95%;">Photography</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="achievements" style="background-image: url(images/content/narrow_bg.jpg);">
+                <div class="achievements__wrapper">
+                    <div class="container">
+                        <div class="achievements__inner">
+                            <div class="achievements__inner-item customers">
+                                <p class="achievements__inner-number">230</p>
+                                <p class="achievements__inner-subject">Customers</p>
+                            </div>
+                            <div class="achievements__inner-item awards">
+                                <p class="achievements__inner-number">22</p>
+                                <p class="achievements__inner-subject">Awards</p>
+                            </div>
+                            <div class="achievements__inner-item projects">
+                                <p class="achievements__inner-number">2380</p>
+                                <p class="achievements__inner-subject">Completed Projects</p>
+                            </div>
+                            <div class="achievements__inner-item followers">
+                                <p class="achievements__inner-number">50890</p>
+                                <p class="achievements__inner-subject">Followers</p>
+                            </div>
+                        </div> 
                     </div>
                 </div>
             </section>
